I added the main element with my picture, place holder for my bio, and place holders for my work.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,10 +1,10 @@
 /* Navbar style */
 nav {
-    background-color: rgb(56, 58, 58);
-    /* text-align: center; */
-
+    font-family: nunito;
+    font: 300;
 }
 
-/* div .a {
-    text-align: center;
-} */
+.fw-light {
+    font-family: Nunito;
+   
+}
