--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,7 +4,35 @@ nav {
     font: 300;
 }
 
-.fw-light {
-    font-family: Nunito;
-   
+/* font-family: 'Chicle', cursive;
+font-family: 'Nunito', sans-serif; */
+
+/* Section with Nadia's img & text style */
+.container {
+    position: relative;
 }
+
+.centerleft {
+    position: absolute;
+    top: 200px; 
+    left: auto;
+    font-size: 60px;  
+    font-family: 'Chicle', cursive;
+}
+
+.centeright {
+    position: absolute;
+    top: 200px;
+    right: 150px;
+    font-size: 60px;
+    font-family: 'Nunito', sans-serif;
+  }
+
+  img {
+      
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+  }
+    
