--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,6 +1,3 @@
-/* Navbar style */
-
-
 /* font-family: 'Chicle', cursive;
 font-family: 'Nunito', sans-serif; */
 
@@ -9,7 +6,6 @@ font-family: 'Nunito', sans-serif; */
     position: relative;
 }
 
-
 .centerleft {
     position: absolute;
     top: 200px; 
@@ -17,19 +13,36 @@ font-family: 'Nunito', sans-serif; */
     font-size: 50px;  
     font-family: 'Chicle', cursive;
 }
-
+.centerleftp {
+  position: absolute;
+  top: 260px; 
+  left: auto;
+  font-size: 20px;;  
+ 
+}
 .centeright {
     position: absolute;
     top: 200px;
-    right: 150px;
+    right: 45px;
     font-size: 50px;
     font-family: 'Nunito', sans-serif;
   }
-
-  img {
+.centerightp {
+    position: absolute;
+    top: 260px;
+    right: 45px;
+    font-size: 20px;
+    font-family: 'Nunito', sans-serif;
+  }
+img {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
   }
-    
+@media screen and (max-width: 800px) {
+    .imgText {
+      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+  }    
+/* contact section */
